--- a/assets/sass/basic.scss
+++ b/assets/sass/basic.scss
@@ -104,4 +104,5 @@ pre {
 
 hr {
   margin: $global-margin 0 $global-margin*2;
+  clear: both;
 }
