--- a/assets/style.scss
+++ b/assets/style.scss
@@ -56,7 +56,7 @@ $base-font-size: 16px;
 // this define the margin of headers and h1 first elements
 $global-h1-margin: $base-font-size*1.2;
 $global-header-top-distance: $global-h1-margin*2;
-
+$global-home-thumbnail-height: 200px;
 $global-border-radius: 25px;
 $global-margin: $global-border-radius;
 $global-body-width: 900px;
